--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <body>
     <header>
         <h1>Lanre Oshodi</h1>
-        <p>Solutions Architect | TS/SCI FSP | CISSP | CCA</p>
+        <p>Solutions Architect | Cleared Professional | CISSP | CCA</p>
     </header>
 
     <div class="container">
